--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^4.1.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "recharts": "^1.0.0-beta.10"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
